@@ -1,23 +1,27 @@
 package com.ceylontrail.backend_server.service.impl;
 
-import com.ceylontrail.backend_server.dto.comment.GetCommentDTO;
 import com.ceylontrail.backend_server.dto.post.*;
 import com.ceylontrail.backend_server.dto.trip.CommunityTripDTO;
 import com.ceylontrail.backend_server.dto.user.CommunityUserDTO;
+import com.ceylontrail.backend_server.entity.CommentEntity;
 import com.ceylontrail.backend_server.entity.ImageEntity;
 import com.ceylontrail.backend_server.entity.PostEntity;
+import com.ceylontrail.backend_server.entity.ReportEntity;
 import com.ceylontrail.backend_server.entity.UserEntity;
 import com.ceylontrail.backend_server.entity.enums.PostPrivacyEnum;
 import com.ceylontrail.backend_server.exception.AlreadyExistingException;
 import com.ceylontrail.backend_server.exception.NotFoundException;
 import com.ceylontrail.backend_server.exception.UnauthorizedException;
+import com.ceylontrail.backend_server.repo.CommentRepo;
 import com.ceylontrail.backend_server.repo.PostRepo;
+import com.ceylontrail.backend_server.repo.ReportRepo;
 import com.ceylontrail.backend_server.repo.UserRepo;
 import com.ceylontrail.backend_server.service.AuthService;
 import com.ceylontrail.backend_server.service.ImageService;
 import com.ceylontrail.backend_server.service.PostService;
+import com.ceylontrail.backend_server.service.TripService;
 import com.ceylontrail.backend_server.util.StandardResponse;
-import org.springframework.beans.factory.annotation.Autowired;
+import lombok.AllArgsConstructor;
 import org.springframework.stereotype.Service;
 import org.springframework.transaction.annotation.Transactional;
 
@@ -25,19 +29,17 @@ import java.util.*;
 import java.util.stream.Collectors;
 
 @Service
+@AllArgsConstructor
 public class PostServiceIMPL implements PostService {
 
-    @Autowired
-    private PostRepo postRepo;
+    private final AuthService authService;
+    private final TripService tripService;
+    private final ImageService imageService;
 
-    @Autowired
-    private UserRepo userRepo;
-
-    @Autowired
-    private AuthService authService;
-
-    @Autowired
-    private ImageService imageService;
+    private final PostRepo postRepo;
+    private final UserRepo userRepo;
+    private final ReportRepo reportRepo;
+    private final CommentRepo commentRepo;
 
     @Override
     public PostEntity initialPostCheck(Long postId) {
@@ -48,14 +50,22 @@ public class PostServiceIMPL implements PostService {
         return post;
     }
 
-    @Override
-    public PostEntity initialPostAndUserCheck(Long postId) {
+    private PostEntity initialPostAndUserCheck(Long postId) {
         PostEntity post = this.initialPostCheck(postId);
         UserEntity loggedUser = userRepo.findByUserId(authService.getAuthUserId());
         if (loggedUser.getUserId() != post.getUser().getUserId()) {
             throw new UnauthorizedException("Post author is not logged in");
         }
         return post;
+    }
+
+    private CommentEntity initialCommentAndUserCheck(Long commentId) {
+        CommentEntity comment = commentRepo.findByCommentId(commentId);
+        if (comment == null)
+            throw new NotFoundException("Comment does not exist");
+        if (userRepo.findByUserId(authService.getAuthUserId()).getUserId() != comment.getUser().getUserId())
+            throw new UnauthorizedException("Comment author is not logged in");
+        return comment;
     }
 
     private GetPostFeedDTO postPreProcessForSendToFeed(PostEntity post) {
@@ -102,11 +112,10 @@ public class PostServiceIMPL implements PostService {
     }
 
     @Override
-    public StandardResponse getUserPosts() {
-        List<GetPostFeedDTO> postsMap = postRepo.findPostEntitiesByUser_UserIdOrderByCreatedAtDesc(authService.getAuthUserId()).stream()
+    public List<GetPostFeedDTO> getUserPosts(int userId) {
+        return postRepo.findPostEntitiesByUser_UserIdOrderByCreatedAtDesc(userId).stream()
                 .map(this::postPreProcessForSendToFeed)
-                .collect(Collectors.toList());
-        return new StandardResponse(200, "Posts fetched successfully", postsMap);
+                .toList();
     }
 
     @Override
@@ -162,14 +171,14 @@ public class PostServiceIMPL implements PostService {
         return new StandardResponse(200, "Post fetched successfully", postDTO);
     }
 
-
-
     @Override
     @Transactional
-    public StandardResponse createPost(CreatePostDTO postDTO) {
+    public StandardResponse createPost(AddPostDTO postDTO) {
         PostEntity post = new PostEntity();
         post.setUser(userRepo.findByUserId(authService.getAuthUserId()));
         post.setContent(postDTO.getContent());
+        if (postDTO.getTripId() != null)
+            post.setTrip(this.tripService.initialTripAndUserCheck(Integer.parseInt(postDTO.getTripId())));
         if (Objects.equals(postDTO.getPrivacy(), String.valueOf(PostPrivacyEnum.FOLLOWERS)))
             post.setPrivacy(PostPrivacyEnum.FOLLOWERS);
         else if (Objects.equals(postDTO.getPrivacy(), String.valueOf(PostPrivacyEnum.ONLY_ME)))
@@ -185,8 +194,8 @@ public class PostServiceIMPL implements PostService {
     }
 
     @Override
-    public StandardResponse updatePost(EditPostDTO postDTO) {
-        PostEntity post = this.initialPostAndUserCheck(postDTO.getPostId());
+    public StandardResponse updatePost(Long postId, EditPostDTO postDTO) {
+        PostEntity post = this.initialPostAndUserCheck(postId);
         post.setContent(postDTO.getContent());
         if (Objects.equals(postDTO.getPrivacy(), String.valueOf(PostPrivacyEnum.FOLLOWERS)))
             post.setPrivacy(PostPrivacyEnum.FOLLOWERS);
@@ -199,16 +208,16 @@ public class PostServiceIMPL implements PostService {
     }
 
     @Override
-    public StandardResponse deletePost(DeletePostDTO postDTO) {
-        PostEntity post = this.initialPostAndUserCheck(postDTO.getPostId());
+    public StandardResponse deletePost(Long postId) {
+        PostEntity post = this.initialPostAndUserCheck(postId);
         imageService.deletePostImages(post.getImages());
         postRepo.delete(post);
         return new StandardResponse(200, "Post deleted successfully", null);
     }
 
     @Override
-    public StandardResponse addLikePost(LikePostDTO postDTO) {
-        PostEntity post = this.initialPostCheck(postDTO.getPostId());
+    public StandardResponse addLike(Long postId) {
+        PostEntity post = this.initialPostCheck(postId);
         UserEntity loggedUser = userRepo.findByUserId(authService.getAuthUserId());
         if (post.getLikes().contains(loggedUser))
             throw new AlreadyExistingException("Post liked already exists");
@@ -218,14 +227,49 @@ public class PostServiceIMPL implements PostService {
     }
 
     @Override
-    public StandardResponse removeLikePost(LikePostDTO postDTO) {
-        PostEntity post = this.initialPostCheck(postDTO.getPostId());
+    public StandardResponse removeLike(Long postId) {
+        PostEntity post = this.initialPostCheck(postId);
         UserEntity loggedUser = userRepo.findByUserId(authService.getAuthUserId());
         if (!post.getLikes().contains(loggedUser))
             throw new AlreadyExistingException("Post liked does not exist");
         post.getLikes().remove(loggedUser);
         postRepo.save(post);
         return new StandardResponse(200, "Like removed successfully", null);
+    }
+
+    @Override
+    public StandardResponse addComment(Long postId, AddCommentDTO commentDTO) {
+        CommentEntity comment = new CommentEntity();
+        comment.setPost(this.initialPostCheck(postId));
+        comment.setUser(userRepo.findByUserId(authService.getAuthUserId()));
+        comment.setContent(commentDTO.getContent());
+        commentRepo.save(comment);
+        return new StandardResponse(200, "Comment added successfully", null);
+    }
+
+    @Override
+    public StandardResponse updateComment(Long commentId, EditCommentDTO commentDTO) {
+        CommentEntity comment = this.initialCommentAndUserCheck(commentId);
+        comment.setContent(commentDTO.getContent());
+        commentRepo.save(comment);
+        return new StandardResponse(200, "Comment updated successfully", null);
+    }
+
+    @Override
+    public StandardResponse removeComment(Long commentId) {
+        CommentEntity comment = this.initialCommentAndUserCheck(commentId);
+        commentRepo.delete(comment);
+        return new StandardResponse(200, "Comment deleted successfully", null);
+    }
+
+    @Override
+    public StandardResponse reportPost(Long postId, ReportPostDTO postDTO) {
+        ReportEntity report = new ReportEntity();
+        report.setPost(this.initialPostCheck(postId));
+        report.setUser(this.userRepo.findByUserId(this.authService.getAuthUserId()));
+        report.setReason(postDTO.getReason());
+        reportRepo.save(report);
+        return new StandardResponse(200, "Post reported successfully", null);
     }
 
 }
